--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
@@ -1,81 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Comparing resources</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 dir="ltr">
-Comparing resources</H1>
-<p>When a comparison is performed, all applicable comparison 
-editors appear in the editor area. In the comparison editors, the differences 
-are highlighted so you can browse and copy changes between the compared 
-resources. </p>
-
-<p>To compare resources:</p>
-<ol>
-  <li>
-    <p>Select two or three resources in the Navigator view. </li>
-  <li>
-    <p>From the resource's pop-up menu, select <b>Compare With.</b></li>
-</ol>
-<p>The files are opened in the editor area, with
-differences highlighted.&nbsp;
-<p>Here are some of the comparisons that you can perform.&nbsp;
-
-<ul>
-  <li>
-    <b>Compare With &gt; Each Other</b> - compares two or three
-    source files in the Navigator view with each other.</li>
-  <li>
-    <b>Compare With &gt; Local History - </b>compares the
-    selected resource to one that is in the local history, which is maintained
-    when you save changes. (<b>Tip</b>: to configure the size and depth of your
-    local history, select <b>Workbench &gt; Preferences</b>.)</li>
-  <li>
-    <b>Compare With &gt; Version</b> - compares the selected
-    resource with a version that has been released to the repository. This requires
-you to choose a version of the resource from a list.</li>
-  <li>
-    <b>Compare With &gt; Stream Contents </b>- compares the
-    selected resource&nbsp; with the
-version of the same resource that is currently released to the stream.&nbsp;</li>
-  <li>
-    <b>Compare With &gt; Base Version </b>- compares the
-    selected resource&nbsp; with its state prior to modification, that is the
-    version that you initially added from the repository.</li>
-    </ul>
-
-<p><b>Tip</b>: You can customize the behavior of the comparison editor by
-selecting <b>Workbench &gt; Preferences &gt; Workbench &gt; Compare Viewers</b>
-from the main menu bar. You can select to &quot;lock scroll&quot; the pane
-contents, as well as setting options for showing conflicts with other team
-members and changing the default font.</p>
-
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-31.htm">Comparison editors</a><br>
-<a href="../concepts/concepts-30.htm">Team synchronization</a><br>
-<a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
-<a href="../concepts/concepts-30b.htm">Synchronize view</a><br>
-<a href="../concepts/concepts-17a.htm">Local history</a></p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-115.htm">Synchronizing with a stream</a><br>
-<a href="tasks-68dg.htm">Merging changes in the comparison editor</a><br>
-<a href="tasks-113b.htm">Resolving conflicts and merging changes</a><br>
-<a href="tasks-68b.htm">Setting preferences for comparing files</a><br>
-<a href="tasks-101.htm">Comparing resources with repository versions</a><br>
-<a href="tasks-68bg.htm">Understanding the comparison</a><br>
-<a href="tasks-3g.htm">Tiling editors</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Comparing resources</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Comparing resources</H1><p>When a comparison is performed, all applicable comparison editors appear in the editor area. In the comparison editors, the differences are highlighted so you can browse and copy changes between the compared resources.</p><p>To compare resources:</p><ol>  <li>Select one or more resources in the Navigator view.</li>  <li>From the resource's pop-up menu, select <b>Compare With.</b></li></ol><p>A tool for viewing differences is opened in the editor area.</p><p>Here are some of the comparisons that you can perform.&nbsp;</p><dl><dt><b>Compare With &gt; Latest From Repository</b></dt><dd>compares the selected resource with the version of the same resource that is    currently released to the active branch.</b></dd><dt><b>Compare With &gt; Branch or Version</b></dt><dd>compares the selected resource with a version that has been released to the    repository or to the latest version in a particular branch. This requires    you to choose a version of the resource or a branch from a list.</dd><dt><b>Compare With &gt; Patch</b></dt><dd>Displays the result of applying a patch to a resource.</dd><dt><b>Compare With &gt; Each Other</b></dt><dd>compares two or three selected resources with each other</dd><dt><b>Compare With &gt; Revision</b></dt><dd>compares the selected resource with a version of the same resource that was    released to the active branch. This requires you to choose a revision of the    resource from a list.</dd><dt><b>Compare With &gt; Local History</b></dt><dd>compares the selected resource to one that is in the local history, which     is maintained when you save changes. (<em>Tip:</em> to configure the size	 and depth of your local history, select <b>Workbench &gt; Preferences</b>.)</dd></dl><p><em>Tip:</em> You can customize the behavior of the comparison editor byselecting <b>Workbench &gt; Preferences &gt; Workbench &gt; Compare Viewers</b>from the main menu bar. You can select to &quot;lock scroll&quot; the panecontents, as well as setting options for showing conflicts with other teammembers and changing the default font.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-31.htm">Comparison editors</a><br><a href="../concepts/concepts-30.htm">Team synchronization</a><br><a href="../concepts/concepts-29.htm">Three-way comparisons</a><br><a href="../concepts/concepts-30b.htm">Synchronize view</a><br><a href="../concepts/concepts-17a.htm">Local history</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-115.htm">Synchronizing with a stream</a><br><a href="tasks-68dg.htm">Merging changes in the comparison editor</a><br><a href="tasks-113b.htm">Resolving conflicts and merging changes</a><br><a href="tasks-68b.htm">Setting preferences for comparing files</a><br><a href="tasks-101.htm">Comparing resources with repository versions</a><br><a href="tasks-68bg.htm">Understanding the comparison</a><br><a href="tasks-68c.htm">Working with patches</a><br><a href="tasks-3g.htm">Tiling editors</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
