Details pane update

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
@@ -46,6 +46,7 @@ Inspect</SPAN>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p dir="ltr"><a href="../reference/ref-52.htm">Display view</a><br>
 <a href="../reference/ref-56.htm">Expressions view</a><br>
+<a href="../reference/ref-56c.htm">Expressions view Show Detail Pane</a><br>
 &nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12"> </p>
