--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -20,27 +20,28 @@ Running Ant build files</H1>
 selected XML file is a valid script, the Ant wizard opens. </p>
   </li>
   <li>
-<p CLASS="Para">Select a target from the<b> Available Targets </b>list. You can 
-select more than one item in the list. The order in which you select the items 
-is the order in which they will run. This is the number indicated in square 
-brackets.</p>
+<p CLASS="Para">Select one or more targets from the <b>Available targets</b> list. 
+The order in which you select the items 
+is the order in which they will run. The order is indicated by the number in square 
+brackets to the left of the target.</p>
   </li>
   <li>
-<p CLASS="Para">If applicable, type any required arguments in the <b>Arguments</b> 
+<p CLASS="Para">(Optional) Type any required arguments in the <b>Arguments</b> 
 field.</p>
   </li>
   <li>
 <p CLASS="Para">If you want output from the script to display in a console in 
-the workbench, select <b>Show execution log in console</b> check box. </p>
+the workbench, select <b>Show execution log in console</b>. </p>
   </li>
   <li>
-<p CLASS="Para">Click <b>Finish</b> to close the wizard. If you selected the 
-check box in the previous step, the Log Console displays any applicable execution results 
-after the script runs.</p>
+<p CLASS="Para">Click <b>Finish</b>. </p>
   </li>
 </ol>
-<p>Once a script is run through the Run Ant pop-up menu it is automatically configured as an external tool.
-In order to change the configuration or re-run the script, go to the <b>Run > External Tools</b> menu.
+<p>The Ant script will run on the selected targets. If you selected the 
+option, the Log Console displays any applicable execution results 
+after the script runs.</p>
+<p>Once a script is run through the Ant wizard, it is automatically configured as an external tool.
+In order to change the configuration or rerun the script, go to the <b>Run &gt; External Tools</b> menu.
 </p>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
