--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
@@ -63,11 +63,11 @@ In the Navigator view select the file1.txt</P>
     <TD valign="top" align="left"> Open the preferences (Window &gt; Preferences) 
       and turn on the CVS label decorations (on page Workbench &gt; Label Decorations 
       and ensure CVS is checked).
-<p><img align="texttop" border="0" src="../images/Image84_replace_info.jpg" width="341" height="133"></p>
+<p><img align="texttop" border="0" src="../images/Image84_decorator_preference.jpg" alt="Decorator Preference" width="605" height="529"></p>
       <p>Observe that the Navigator updates to show the CVS state of a resource. 
         Notice that the modified file is preceded by &quot;&gt; (see #1) indicating 
         that we have changed file1.txt (by replacing it with the earlier version).&nbsp;</p>
-      <p><img align="texttop" border="0" src="../images/Image84_replace2.jpg"  alt="File selection">
+      <p><img align="texttop" border="0" src="../images/Image84_replace2.jpg"  alt="File selection" width="220" height="133">
 </TD>
 </TR>
 <TR>
@@ -93,7 +93,7 @@ In the Navigator view select the file1.txt</P>
 
 
 <P>&nbsp;&nbsp;<br>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 </P>
 
 
