--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
@@ -80,7 +80,7 @@ Select the project JanesTeamProject.</P>
         at the contents of folder1 you can also see that the version numbers of 
         the individual files match the version numbers in our workbench.</P>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image85_version2.jpg" alt="Repositories View"></p>
+  <p><img align="texttop" border="0" src="../images/Image85_version2.jpg" alt="Repositories View and Navigator View" width="333" height="417"></p>
 </blockquote>
 </TD>
 </TR>
