--- a/bundles/org.eclipse.platform.doc.user/tasks/ttoolbars.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/ttoolbars.htm
@@ -1,1 +1,57 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Rearranging the main toolbar</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Rearranging the main toolbar</H1><p>You can rearrange sections of the main toolbar. Toolbar sections are dividedby a thin vertical line.</p><ol>  <li>    Make sure the toolbar is unlocked. The toolbar is locked    if it does not have thick vertical bars next to the thin vertical toolbar    dividers.<br>    <img align="texttop" border="0" src="../images/Image90_locked_toolbar.jpg" alt="Locked toolbar">    <img align="texttop" border="0" src="../images/Image90_unlocked_toolbar.jpg" alt="Unlocked toolbar"><br>    If the toolbar is locked, unlock the toolbar by selecting the <b>Window &gt; Lock the Toolbars</b> menu item.    </li>  <li>    Grab the section of the toolbar you want to rearrange by moving    the mouse over the thick vertical line on the left side of the desired segment.    The mouse cursor changes its shape to indicate that you can click to move the     toolbar section.    </li>      <li>    Click and hold the left mouse button to grab the toolbar section.     </li>   <li>    Move the section left and right or up and down. Release the     mouse button to place it in the new location.    </li>  <li>    To pack the tool items so that they are fully visible and    don't have gaps between them select <b>Window &gt; Reset Toolbar Layout</b>.    </li>  <li>    To prevent accidental changes to the toolbar lock it again by    selecting the <b>Window &gt; Lock the Toolbars</b> menu item.    </li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-18.htm"><br>Toolbars</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Rearranging the main toolbar</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Rearranging the main toolbar</H1>
+<p>
+You can rearrange sections of the main toolbar. Toolbar sections are divided
+by a thin vertical line.
+</p>
+
+<ol>
+  <li>
+    Make sure the toolbar is unlocked. The toolbar is locked
+    if it does not have thick vertical bars next to the thin vertical toolbar
+    dividers.<br>
+    <img align="texttop" border="0" src="../images/Image90_locked_toolbar.jpg" alt="Locked toolbar" width="228" height="32">
+    <img align="texttop" border="0" src="../images/Image90_unlocked_toolbar.jpg" alt="Unlocked toolbar" width="240" height="30"><br>
+    If the toolbar is locked, unlock the toolbar by selecting the <b>Window &gt; Lock the Toolbars</b> menu item.
+    </li>
+  <li>
+    Grab the section of the toolbar you want to rearrange by moving
+    the mouse over the thick vertical line on the left side of the desired segment.
+    The mouse cursor changes its shape to indicate that you can click to move the 
+    toolbar section.
+    </li>    
+  <li>
+    Click and hold the left mouse button to grab the toolbar section. 
+    </li> 
+  <li>
+    Move the section left and right or up and down. Release the 
+    mouse button to place it in the new location.
+    </li>
+  <li>
+    To pack the tool items so that they are fully visible and
+    don't have gaps between them select <b>Window &gt; Reset Toolbar Layout</b>.
+    </li>
+  <li>
+    To prevent accidental changes to the toolbar lock it again by
+    selecting the <b>Window &gt; Lock the Toolbars</b> menu item.
+    </li>
+</ol>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<a href="../concepts/concepts-18.htm"><br>Toolbars</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
+</p>
+
+</BODY>
+</HTML>
