--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9i.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9i.htm
@@ -15,7 +15,9 @@ moving (docking) views, you can save your changes for future use.
 
 <ol>
   <li>Switch to the perspective that you want to save.</li>
-  <li>Select <b>Window &gt; Save Perspective As</b> from the main menu bar.</li>
+  <li>Click <b>Window &gt; Save Perspective As</b>.</li>
+  <li>Type a new name for the perspective into the <b>Name</b> field.</li>
+  <li>Click <b>OK</b>.
 </ol>
 
 <p>The name of the new perspective is added to the <b>Window &gt; Open Perspective</b> menu.
