--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-85.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-85.htm
@@ -12,10 +12,16 @@
 Expanding the Ant classpath</H1>
 
 <p CLASS="Para">When using an optional or custom task it is usually necessary to 
-add extra libraries to the classpath. In order to extend the Ant classpath in 
-the workbench, go to the menu
-<b>Window > Preferences > External Tools > Ant</b> and edit the classpath 
-according to your needs. The <b>Restore Defaults</b> button restores the Ant classpath to its original state.</p>
+add extra libraries to the classpath. To extend the Ant classpath in 
+the workbench:
+<ol>
+  <li>Click <b>Window > Preferences</b>.</li>
+  <li>Expand <b>External tools</b> and select <b>Ant</b>. If you are not on it already, click the <b>Classpath</b> tab.</li>
+  <li>To add a JAR file to the classpath, click <b>Add Jar</b> and select the JAR file.</li>
+  <li>To add a folder to the classpath, click <b>Add Folder</b> and select the folder.</li>
+  <li>To remove an item from the classpath, select it and click <b>Remove</b>.</li>
+  <li>To restore the classpath to the default, click <b>Restore Defaults</b>.</li>
+</ol>
 
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/cantsup.htm">Ant support</a><br>
