What's New in 2.0 section

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
@@ -6,67 +6,147 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>What's New In 2.0</title>
-
+<title>What's new in 2.0</title>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-What's New In 2.0</H1>
-<P CLASS="Para"></P>
+What's new in 2.0</H1>
+<P CLASS="Para">
+There are numerous new features and changes to existing features in the new 
+Eclipse Workbench. The following lists some of them.
+</P>
 <dl>
-  <dt>Accessibility</dt>
-  <dd> </dd>
-
-  <dt>Key bindings</dt>
-  <dd> </dd>
-
-  <dt>Toolbar rearrange</dt>
-  <dd> </dd>
-
-  <dt>Working sets</dt>
-  <dd> </dd>
-
-  <dt>Autofix</dt>
-  <dd> </dd>
-
-  <dt>External Tools</dt>
-  <dd> </dd>
-
+<P CLASS="Para">
   <dt>Menu reorganization</dt>
-  <dd> </dd>
-
-  <dt>Perspectives</dt>
-  <dd> </dd>
-
-  <dt>Editor reuse</dt>
-  <dd></dd>
-
-  <dt>Text file encoding</dt>
-  <dd></dd>
-
+  <dd>The Workbench menus have been reorganized as follows:
+    <ul>
+      <li>The Perspective menu has been removed, with its items moving to the 
+      	<b>Window</b> menu.
+      <li>There are several new menu items in the <b>File</b> and <b>Edit</b> 
+      	menus. Some of these menu items were previously found in the navigator 
+      	view context menu and in editor context menus.
+      <li>There is a new <b>Navigate</b> menu.
+      <li>There is a new <b>Search</b> menu.      
+    </ul>  
+  </dd>
+</P>
+<P CLASS="Para">
+  <dt>Recently used file list</dt> 
+  <dd>The <b>File</b> menu now shows the most recently opened files. You
+  	can specify the size of this list on the <b>Workbench->Editors</b> 
+  	preference page.</dd>
+</P>
+<P CLASS="Para">
   <dt>Single click activation</dt>
-  <dd></dd>
-
-  <dt>Decorators</dt>
-  <dd></dd>
-
+  <dd>You now have the option to activate files with a single instead of a double 
+  	mouse click. See the <b>Workbench</b> preference page for related settings.
+  </dd>
+</P>
+<P CLASS="Para">
+  <dt>Toolbar rearrange</dt>
+  <dd>You may now rearrange sections of the main toolbar using the mouse.
+  </dd>
+</P>
+<P CLASS="Para">
+  <dt>Accessibility</dt>
+  <dd>Accessibility features have been added to Eclipse. Accessibility features 
+  	help people with a physical disability or those with special needs to use 
+  	software products successfully. Some of these features can help everyone
+  	use Eclipse more effectively. The <b>Window->Keyboard Shortcuts</b> menu for
+  	example lists keyboard shortcuts for frequently used operations.</dd>
+</P>
+<P CLASS="Para">
+  <dt>Key bindings</dt>
+  <dd>The <b>Window->Editors</b> preference page gives you the option to use 
+  	non-standard key bindings.</dd>
+</P>
+<P CLASS="Para">
+  <dt>Label decorations</dt>
+  <dd>There is a new concept of label decorations. Plugins may contribute
+  	information to resource labels and icons. You can select which decorations
+  	you would like to see on the <b>Workbench->Label Decorations</b> preference page.
+  </dd>
+</P>
+<P CLASS="Para">
+  <dt>External tools</dt>
+  <dd>You can now run arbitrary external tools from within Eclipse and display
+  	output from these tools in the log console view. The Ant support makes
+  	use of this new feature as well.</dd>
+</P>
+<P CLASS="Para">
+  <dt>Working sets</dt>
+  <dd>Working sets group elements for display in views or for operations on a set 
+  	of elements. The Navigator view, Tasks view, the search facility and more 
+  	support the use of working sets.  	
+  </dd>
+</P>
+<P CLASS="Para">
+  <dt>Perspectives</dt>
+  <dd>You can no longer open more than one perspective of the same type in one
+  	window. For example if you already have an open Resource perspective you will
+  	have to open another window in order to open a second Resource perspective.
+  	<P CLASS="Para">
+  	The perspective preferences have changed as well and have been moved to
+  	<b>Workbench->Perspectives</b>.
+  	</P>  	
+  </dd>
+</P>
+<P CLASS="Para">
+  <dt>Fast views</dt>
+  <dd>Fast views work like other views except they do not take up space in 
+  	your workbench window. They can easily be hidden and are accessed by toolbar
+  	buttons. Any view can be opened as a fast view.</dd>
+</P>
+<P CLASS="Para">
+  <dt>Editors</dt>
+  <dd>Editors are now shared by perspectives in the same window. For example if 
+  	you open a set of files in the Resource perspective and then open a 
+  	Java perspective, the same files will be visible in the Java perspective.
+  	<P CLASS="Para">
+  	You may specify the maximum number of open editors on the 
+  	<b>Workbench->Editors</b> preference page. Old editors will be closed if
+  	the limit is exceeded.
+  	</P>  	
+  </dd>
+</P>
+<P CLASS="Para">
+  <dt>Text file encoding</dt>
+  <dd>You can select the character encoding used to read and write files on
+  	the <b>Workbench->Editors</b> preference page.</dd>
+</P>
+<P CLASS="Para">
+  <dt>Quick Fix</dt>
+  <dd>Certain problems displayed in the tasks view may now be fixed automatically,
+  	with a click of the mouse.
+  </dd>
+</P>
+<P CLASS="Para">
+  <dt>Import project</dt>
+  <dd>You can import Eclipse projects that reside outside your current workspace
+  	using the new <b>Existing Project into Workspace</b> import wizard.</dd>
+</P>
+<P CLASS="Para">
   <dt>Import/Export Preferences</dt>
-  <dd></dd>
-
-  <dt>Import Project</dt>
-  <dd></dd>
+  <dd>Preferences may now be exchanged between workspaces using the import/export
+  	preference feature.</dd>
+</P>
 </dl>
-
+<p>&nbsp;</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<!-- <br><a href="../concepts/"></a></p> -->
-
+<!-- ADD LINKS DIRECTLY IN ABOVE TOPICS -->
+<br><a href="../concepts/cantsup.htm">Ant support</a>
+</p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<!-- <br><a href="../tasks/"></a> -->
-
+<!-- ADD LINKS DIRECTLY IN ABOVE TOPICS -->
+<br><a href="../tasks/ttoolbars.htm">Rearranging the main toolbar</a>
+</p>
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
+<!-- ADD LINKS DIRECTLY IN ABOVE TOPICS -->
+<br><a href="../reference/ref-35.htm">Log console view</a>
+</p>
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
-
 
 </BODY>
 </HTML>
