--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
@@ -11,60 +11,45 @@
 <H1 CLASS="Head">
 Using a different version of Ant</H1>
 <P CLASS="Para">
-The Eclipse Platform provides Ant 1.4.1 as a plug-in library. When running an Ant script in the workbench,
-1.4.1 is the version used by default. It is possible to use different versions although they are not supported.
+The Eclipse platform provides Ant 1.4.1 as a plug-in library. When running an Ant script in the workbench,
+version 1.4.1 is used by default. It is possible to use different versions, although they are not supported.
 There are at least two ways of using a different version of Ant:
 </P>
 
 <ol>
-  <li>
-<p CLASS="Para">Changing the Ant classpath</p>
-  </li>
-<br><p CLASS="Para">When running an Ant script all classes needed are taken from the Ant classpath.
-The Ant classpath consists of the plug-ins contributing new tasks, types or libraries plus the classpath defined
-in the external tools preferences page. The preferences page can be accessed through the menu
-<b>Window > Preferences > External Tools > Ant</b>. The two JARs related to Ant 1.4.1 are <b>ant.jar</b>
-and <b>jakarta-ant-1.4.1-optional.jar</b>. Removing these JARs and adding the ones from the desired version
-of Ant should be enough. </p>
-<p CLASS="Para">After changing the Ant JARs through the Ant classpath preference, all future Ant build files
-runs will use the updated version instead of the default.
-The <b>Restore Defaults</b> button restores the Ant classpath to its original state.</p>
-<br>
-  <li>
-<p CLASS="Para">Using Ant as an external tool</p>
-  </li>
-<br><p CLASS="Para">When changing the Ant classpath is not an option or when just curious about testing a
-newer version or beta version of Ant, using it as an external tool can be a better solution. Usually when running an Ant script
-in the workbench, the Ant script itself is considered to be a external tool but it is not the only way. The following
-steps illustrate how to install a binary distribution of Ant  as an external tool. The steps are using Windows as the OS but
-it can be easily ported to other Operating Systems:</p>
-<ul>
-  <li><p CLASS="Para">Download and install the binary version of Ant from
-  <a href="http://jakarta.apache.org/ant/" target="_blank">http://jakarta.apache.org/ant</a> .</p>
-  </li>
-  <li><p CLASS="Para">Go to the menu <b>Run &gt; External Tools &gt; Configure</b>.</p>
-  </li>
-  <li><p CLASS="Para">Click on the <b>New</b> button.</p>
-  </li>
-  <li><p CLASS="Para">Enter a name for your external tool (e.g. External Ant).</p>
-  </li>
-  <li><p CLASS="Para">Click on the <b>Browse File System</b> button.</p>
-  </li>
-  <li><p CLASS="Para">Find and select a file called <b>ant.bat</b> (it should be 
-  in the bin folder of your Ant installation).</p>
-  </li>
-  <li><p CLASS="Para">In the <b>Tool Arguments</b> field enter a arguments for your 
-  script like you would normally enter for running the script outside of the 
-  workbench.</p>
-  </li>
-  <li><p CLASS="Para">In the <b>Working directory</b> field enter the directory of your 
-  script.</p>
-  </li>
-  <li><p CLASS="Para">To run the script go to the menu <b>Run &gt; External Tools &gt; 
+  <li><b>Changing the Ant classpath:</b> When Ant runs a script, it looks for the necessary classes on the Ant classpath.
+  The Ant classpath consists of the plug-ins contributing new tasks, types or libraries, plus the classpath defined
+  in the external tools preferences. To access the preferences, click <b>Window > Preferences > External Tools > Ant</b>. 
+  The two JARs related to Ant 1.4.1 are <code>ant.jar</code>
+  and <code>jakarta-ant-1.4.1-optional.jar</code>. Remove these JARs and add the ones from the desired Ant version.
+  <p>After you change the Ant classpath, all future Ant builds will use the updated version instead of the default.
+  To restore the Ant classpath to its original state, <b>Restore Defaults</b> button on the properties page.</p>
+ </li>
+  <li><b>Using Ant as an external tool:</b>
+When changing the Ant classpath is not an option, or if you are just want to test a
+newer version or beta version of Ant, using it as an external tool can be a better solution. Usually when it is running
+in the workbench, the Ant script itself is considered to be a external tool, but this is not the only way. To
+install a binary distribution of Ant as an external tool (<b>Note:</b> These steps are for Windows, but similar methods can  
+be used for other operating systems):</p>
+<ol type="a">
+  <li>Download and install the binary version of Ant from
+  <a href="http://jakarta.apache.org/ant/" target="_blank">http://jakarta.apache.org/ant</a> .</li>
+  <li>Click <b>Run &gt; External Tools &gt; Configure</b>.</li>
+  <li>Click <b>New</b>.</li>
+  <li>Enter a name for your external tool (for example, External Ant).</li>
+  <li>Click <b>Browse File System</b>.</li>
+  <li>Find and select a file called <code>ant.bat</code> (it should be 
+  in the <code>bin</code> folder of your Ant installation).</li>
+  <li>In the <b>Tool Arguments</b> field enter the arguments for your 
+  script that would normally enter for running the script outside of the 
+  workbench.</li>
+  <li>In the <b>Working directory</b> field enter the directory of your script.</li>
+  <li>Click <b>OK</b> to exit the wizard.
+  <li>To run the script, click <b>Run &gt; External Tools &gt; 
   External Ant</b> .</p>
   </li>
-</ul>
-<p CLASS="Para">When running Ant as an external tool none of the tasks or types 
+</ol>
+<p>When you run Ant as an external tool, none of the tasks or types 
 contributed by Eclipse will work. Also, the Ant classpath preference has no 
 effect in the script execution.</p>
   </ol>
