--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-83.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-83.htm
@@ -4,58 +4,31 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Adding new tasks and types</title>
+<title>Adding new Ant tasks and types</title>
 <meta name="keyword" content="ant">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Adding new tasks and types</H1>
+Adding new Ant tasks and types</H1>
 
-<P CLASS="Para">
-It is possible to add new Ant tasks and types through the Ant preferences page. 
+<p>
+Add new Ant tasks and types through the Ant preferences page. 
 These tasks and types will be available for build files running in the workbench 
-without having to use taskdef or typedef in the script declaration (for more on 
+without, having to use taskdef or typedef in the script declaration (For more on 
 taskdef or typedef see the Ant documentation in
-<a href="http://jakarta.apache.org/ant/" target="_blank">http://jakarta.apache.org/ant</a> ). The 
-following steps illustrate how to add a new task.</P>
+<a href="http://jakarta.apache.org/ant/" target="_blank">http://jakarta.apache.org/ant</a> ). </p>
+<p>To add a new task or type:</p>
 
 <ol>
-  <li>
-
-<P CLASS="Para">
-Go to the menu <b>Window &gt; Preferences &gt; External Tools &gt; Ant</b>.</P>
-
-  </li>
-  <li>
-
-<P CLASS="Para">
-Select on the <b>Tasks</b> tab.</P>
-
-  </li>
-  <li>
-
-<P CLASS="Para">
-Click on the <b>Add Task</b> button.</P>
-
-  </li>
-  <li>
-
-<P CLASS="Para">
-Fill the task <b>Name</b> and <b>Class</b>.</P>
-
-  </li>
-  <li>
-
-<P CLASS="Para">
-Select the <b>Library</b> where the task class is declared. If the library is 
-not present on the list it has to be added to the <a href="../tasks/tasks-85.htm">Ant classpath</a>.</P>
-
-  </li>
+  <li>Click <b>Window &gt; Preferences</b></li>
+  <li>Expand <b>External Tools</b> and select <b>Ant</b>.</li>
+  <li>Click the <b>Tasks</b> tab or the <b>Types</b> tab.</li>
+  <li>Click <b>Add Task</b> or <b>Add Type</b>.</li>
+  <li>Provide a name and class for the task or type.</li>
+  <li>Select the library where the task or type is declared. If the library is not present on the list, 
+    you must add it to the Ant classpath (see the Related task link below).</li>
 </ol>
 
-<P CLASS="Para">
-Adding a type is very similar to adding a task and only requires small changes 
-to the above steps.</P>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/cantsup.htm">Ant support</a><br>
@@ -65,7 +38,7 @@ to the above steps.</P>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="../tasks/tasks-90.htm">Running external tools</a><br>
-<a href="../tasks/tasks-85.htm">Expanding the Ant classpath</a><br>
+<a href="../tasks/tasks-85.htm">Modifying the Ant classpath</a><br>
 <a href="../tasks/tasks-86.htm">Using a different version of Ant</a><br>
 </p>
 
