--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-85.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-85.htm
@@ -4,15 +4,15 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Expanding the Ant classpath</title>
+<title>Modifying the Ant classpath</title>
 <meta name="keyword" content="ant">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Expanding the Ant classpath</H1>
+Modifying the Ant classpath</H1>
 
 <p CLASS="Para">When using an optional or custom task it is usually necessary to 
-add extra libraries to the classpath. To extend the Ant classpath in 
+add extra libraries to the classpath. To modify the Ant classpath in 
 the workbench:
 <ol>
   <li>Click <b>Window > Preferences</b>.</li>
