*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_actionSets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_actionSets.htm
@@ -50,7 +50,7 @@ action to the popup menu of the resource navigator.)&nbsp; The markup follows:</
 			   tooltip=&quot;%ReadmeAction.tooltip&quot;
 			   helpContextId=&quot;org.eclipse.ui.examples.readmetool.open_browser_action_context&quot;
 			   icon=&quot;icons/ctool16/openbrwsr.gif&quot;
-			   class=&quot;org.eclipse.ui.examples.readmetool.WindowActionDelegate&quot;
+			   class=&quot;org.eclipse.ui.examples.readmetool.<b>WindowActionDelegate</b>&quot;
 			   enablesFor=&quot;1&quot;&gt;
 			   &lt;selection class=&quot;org.eclipse.core.resources.IFile&quot;
 					name=&quot;*.readme&quot;&gt;
@@ -105,18 +105,15 @@ relative to other plug-in's toolbar contributions.</P>
 What happens when the action is selected by the user?&nbsp; Most actions in an
 action set are locally implemented.&nbsp; That is, they are implemented by the
 plug-in that defines the action, using the class specified in the <b>class</b>
-attribute.&nbsp; The <b>readmeAction</b> is defined this way.&nbsp;&nbsp;</P>
-<P >
-The action <b> class</b> must implement
+attribute.&nbsp; The action <b> class</b> must implement
 <b><a href="../reference/api/org/eclipse/ui/IWorkbenchWindowActionDelegate.html"> IWorkbenchWindowActionDelegate</a></b>,
 or
 <b><a href="../reference/api/org/eclipse/ui/IWorkbenchWindowPulldownDelegate.html"> IWorkbenchWindowPulldownDelegate</a></b> 
 if the action set is shown as a pull-down in a tool bar.&nbsp; Since we are not
 creating a tool bar pull-down, we provide <b>WindowActionDelegate</b>.&nbsp;
 This class is similar to <b>ObjectActionDelegate</b>.&nbsp;
-It launches the readme sections dialog when the user chooses the action.&nbsp;
-We'll see the sections dialog in <a href="dialogs_applications.htm">Application
-dialogs</a>.</P>
+It launches the readme sections dialog when the user chooses the action.&nbsp; (We'll see the sections dialog in <a href="dialogs_applications.htm">Application
+dialogs</a>.)</P>
 
 
 <P >
