--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_editors.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_editors.htm
@@ -101,8 +101,8 @@ These are set up in the constructor.</P>
 </pre></font>
 <P >
 The names and icons for the actions are set up in the code rather than in the <b>plugin.xml</b>.&nbsp;
-(We'll ignore the differences in the action classes for now until we look at the
-readme action set.)&nbsp;&nbsp;</P>
+(We'll ignore the differences in the action classes for now until we look at <a href="wrkAdv_retarget_contribute.htm">retargetable
+actions</a>.)&nbsp;&nbsp;</P>
 <P >Note how similar the action information is to the
 <b> viewActions</b> information we saw in the markup
 for the view action.&nbsp; The actions are set up in code since we have to
