--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
@@ -25,7 +25,7 @@
      
 <p class="Para"> When this situation arises, you can view the differences between 
   three resource versions: the resource in the workbench, the version of the resource 
-  that is released in the branch, and the <i> common ancestor</i> from which the 
+  that is committed in the branch, and the <i> common ancestor</i> from which the 
   two conflicting versions are based.&nbsp;&nbsp;(If a common ancestor cannot 
   be determined, for example because a resource with the same name and path was 
   created and committed by two different developers, the comparison becomes a 
@@ -35,7 +35,7 @@
   files. If a common ancestor is available, the sync view performs a three-way 
   comparison. It is possible that a common ancestor for two conflicting resource 
   versions cannot be determined, (e.g. a resource with the same name and path 
-  is created and released by 2 different developers). In this case the compare 
+  is created and committed by 2 different developers). In this case the compare 
   becomes a regular two-way compare.&nbsp;&nbsp;</p>
 <p class="Para">In a three-way compare the workbench shows you: </p>
 <ul class="UnorderedList">
